# semantic-router

./: .crd-ref-docs.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .prowlabels.yaml  .readthedocs.yaml  .yamllint  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.extproc  Dockerfile.extproc.cross  Dockerfile.model-downloader  Dockerfile.precommit  Dockerfile.stack  Makefile  OWNER  README.md  docker-compose.obs.yml  docker-compose.yml  llm-router-dashboard.json  mkdocs.yml  pyproject.toml  requirements.txt  upload_model.py  verify_tokenization.py
.github/: PULL_REQUEST_TEMPLATE.md
bench/: LICENSE  MANIFEST.in  OWNER  README.md  bench_plot.py  benchmark_comparison.sh  build_and_test.sh  comprehensive_bench.sh  plot_comprehensive_results.py  pyproject.toml  reasoning_mode_eval.sh  requirements.txt  router_reason_bench.py  run_bench.sh  setup.py
bench/data/: test_data.json
bench/hallucination/: README.md  __init__.py  config-7b.yaml  config.yaml  datasets.py  evaluate.py
bench/reasoning/: __init__.py  bench_plot.py  cli.py  dataset_factory.py  reasoning_mode_eval.py  router_reason_bench_multi_dataset.py
bench/reasoning/dataset_implementations/: commonsenseqa_dataset.py  drop_dataset.py  mmlu_dataset.py  openbookqa_dataset.py  sciq_dataset.py  strategyqa_dataset.py
bench/scripts/rust/candle-binding/: continuous_batch_bench.rs  pure_batch_inference_bench.rs  verify_batch_accuracy.rs
bench/vllm_semantic_router_bench/: __init__.py  cli.py  dataset_factory.py  dataset_interface.py  router_reason_bench_multi_dataset.py
bench/vllm_semantic_router_bench/dataset_implementations/: __init__.py  aqua_rat_dataset.py  arc_dataset.py  gpqa_dataset.py  gsm8k_dataset.py  hellaswag_dataset.py  math_dataset.py  openmathrreasoning_dataset.py  truthfulqa_dataset.py
candle-binding/: Cargo.toml  OWNER  README.md  go.mod  regex_provider.go  regex_provider_bench_test.go  regex_provider_test.go  semantic-router.go  semantic-router_mock.go  semantic-router_test.go  semantic_router.go  semantic_router_test.go
candle-binding/examples/: embedding_benchmark.rs  test_mmbert_lora.rs  test_mmbert_real.rs  test_mmbert_variant.rs
candle-binding/src/: bert_official.rs  lib.rs  modernbert.rs  test_fixtures.rs  unified_classifier.rs
candle-binding/src/classifiers/: mod.rs  unified.rs  unified_test.rs
candle-binding/src/classifiers/lora/: intent_lora.rs  intent_lora_test.rs  mod.rs  parallel_engine.rs  parallel_engine_test.rs  pii_lora.rs  pii_lora_test.rs  security_lora.rs  security_lora_test.rs  token_lora.rs  token_lora_test.rs
candle-binding/src/classifiers/traditional/: batch_processor.rs  batch_processor_test.rs  mod.rs  modernbert_classifier.rs  modernbert_classifier_test.rs
candle-binding/src/core/: config_loader.rs  config_loader_test.rs  mod.rs  similarity.rs  similarity_test.rs  tokenization.rs  tokenization_test.rs  unified_error.rs  unified_error_test.rs
candle-binding/src/ffi/: classify.rs  classify_test.rs  embedding.rs  embedding_test.rs  generative_classifier.rs  init.rs  init_test.rs  memory.rs  memory_safety.rs  memory_safety_test.rs  mod.rs  oncelock_concurrent_test.rs  similarity.rs  state_manager.rs  state_manager_test.rs  tokenization.rs  types.rs  validation.rs  validation_test.rs
candle-binding/src/model_architectures/: config.rs  mod.rs  model_factory.rs  model_factory_test.rs  prefix_cache.rs  routing.rs  routing_test.rs  traits.rs  unified_interface.rs  unified_interface_test.rs
candle-binding/src/model_architectures/embedding/: continuous_batch_scheduler.rs  dense_layers.rs  dense_layers_test.rs  gemma3_model.rs  gemma3_model_test.rs  gemma_embedding.rs  gemma_embedding_test.rs  mod.rs  pooling.rs  pooling_test.rs  qwen3_batched.rs  qwen3_embedding.rs  qwen3_embedding_test.rs
candle-binding/src/model_architectures/generative/: continuous_batch_scheduler.rs  mod.rs  qwen3_guard.rs  qwen3_multi_lora_classifier.rs  qwen3_with_lora.rs
candle-binding/src/model_architectures/lora/: bert_lora.rs  bert_lora_test.rs  lora_adapter.rs  lora_adapter_test.rs  mod.rs
candle-binding/src/model_architectures/traditional/: base_model.rs  base_model_test.rs  bert.rs  bert_test.rs  deberta_v3.rs  deberta_v3_test.rs  mod.rs  modernbert.rs  modernbert_test.rs
candle-binding/src/utils/: memory.rs  mod.rs
candle-binding/test_data/: gemma_reference_outputs.json  qwen3_reference_outputs.json
candle-binding/tests/: classification_output_demo.rs  qwen3_classification_api_test.rs
classifier_model_fine_tuning/: ft_linear.py  go.mod  test_classifier_python.py  test_linear_classifier.go
config/: OWNER  RECIPES.md  category_mapping.json  config-mcp-classifier-example.yaml  config.development.yaml  config.e2e.yaml  config.hybrid.yaml  config.production.yaml  config.prompt_guard.vllm.yaml  config.recipe-accuracy.yaml  config.recipe-latency.yaml  config.recipe-token-efficiency.yaml  config.redis.yaml  config.testing.yaml  config.tracing.yaml  config.yaml  envoy-docker.yaml  envoy.yaml  jailbreak_type_mapping.json  models.lora.yaml  models.yaml  (+4 more)
e2e-tests/llm-katan/: .gitignore  Dockerfile  README.md  create-demo-gif.md  demo-embed.html  pyproject.toml  requirements.txt  terminal-demo.html
e2e-tests/llm-katan/llm_katan/: __init__.py  cli.py  config.py  model.py  server.py
src/vllm-sr/: Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  rebuild-and-test.sh  start-dashboard.sh  supervisord.conf
src/vllm-sr/cli/: config_generator.py  consts.py  core.py  defaults.py  docker_cli.py  logo.py  main.py  merger.py  models.py  parser.py  validator.py
src/vllm-sr/cli/commands/: __init__.py  config.py  generate.py  init.py  serve.py  show_config.py  show_defaults.py  validate.py
src/vllm-sr/cli/templates/: config.template.yaml  envoy.template.yaml  generate_dashboard.py  grafana-dashboard.serve.yaml  grafana-datasource-jaeger.serve.yaml  grafana-datasource.serve.yaml  grafana.serve.ini  llm-router-dashboard.serve.json  prometheus.serve.yaml  router-defaults.yaml
src/vllm-sr/tests/: test_plugin_parsing.py  test_plugin_yaml_generation.py
(+1689 files in other folders)
